@@ -19,6 +19,7 @@
  + directories.ini: System variables can be used in the form ${VARNAME}
  + Local map sources frokm SQLite atlases can now be used - supported formats are 
     RMaps, MBTiles, BigPlanetTracks, Galileo, NaviComputer
+ ! Fixed OpenStreetMap Cycle Map
  
 1.9 beta 4 (2011-05-02)
  ~ Problem loading tile image type for custom map sources (ends up for TrekBuddy 
